Fix: Make codeblocks show scrollbar upon overflow

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ code {
 
 pre > code {
     display: block;
+    overflow-x: scroll;
 }
 
 table {
